DREAM-2108 Preparing repository for dev

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,2 @@
-*       @stoplightio/prism-engineers
+# Global rule:
+* @Bandwidth/band-cx-accounts-and-identity @Bandwidth/band-cx-accounts-and-identity-github-repo-admin
